[gd_scene load_steps=7 format=3 uid="uid://5ft8a4crldqp"]

[ext_resource type="Script" uid="uid://bsa7wktyed6g7" path="res://scripts/pauseMenu.gd" id="1_bcaeg"]
[ext_resource type="Texture2D" uid="uid://b51prb135phol" path="res://assets/sprites/background/pausedMenuBG.png" id="2_bcaeg"]
[ext_resource type="FontFile" uid="uid://dqx0b64ivh6qp" path="res://assets/fonts/Pixelmania.ttf" id="3_3lcxj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3d1i7"]
bg_color = Color(0.16206557, 0.1620656, 0.16206548, 1)
expand_margin_top = 20.0
expand_margin_bottom = 20.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_48ign"]
bg_color = Color(0.27450982, 0.27450982, 0.27450982, 1)
border_color = Color(0.8, 0.8, 0.8, 0.8)
expand_margin_left = 10.0
expand_margin_top = 30.0
expand_margin_right = 10.0
expand_margin_bottom = 30.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_clbkb"]
bg_color = Color(0.27450982, 0.27450982, 0.27450982, 1)
expand_margin_top = 20.0
expand_margin_bottom = 20.0

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bcaeg")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
texture_filter = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -536.5
offset_top = -670.0
offset_right = 536.5
offset_bottom = 403.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_bcaeg")
expand_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -330.0
offset_top = -54.0
offset_right = 330.0
offset_bottom = 534.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 70

[node name="continue" type="Button" parent="CanvasLayer/TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_3lcxj")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_3d1i7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_48ign")
theme_override_styles/hover = SubResource("StyleBoxFlat_clbkb")
text = "CONTINUE
"

[node name="volume" type="Button" parent="CanvasLayer/TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_3lcxj")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_3d1i7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_48ign")
theme_override_styles/hover = SubResource("StyleBoxFlat_clbkb")
text = "VOLUME"

[node name="restart" type="Button" parent="CanvasLayer/TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_3lcxj")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_3d1i7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_48ign")
theme_override_styles/hover = SubResource("StyleBoxFlat_clbkb")
text = "RESTART"

[connection signal="pressed" from="CanvasLayer/TextureRect/VBoxContainer/continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="CanvasLayer/TextureRect/VBoxContainer/volume" to="." method="_on_volume_pressed"]
[connection signal="pressed" from="CanvasLayer/TextureRect/VBoxContainer/restart" to="." method="_on_restart_pressed"]
